# accumulation-zorch

./: .bazelrc  .gitignore  CLAUDE.md  Cargo.toml  MODULE.bazel  README.md  requirements.in  requirements_lock_3_11.txt
.github/workflows/: ci.yml  fold-perf.yml
bench/: bench.sh
crates/fixture-json/: Cargo.toml
crates/fixture-json/src/: lib.rs
crates/zkx-pjrt/: build.rs
crates/zkx-pjrt/src/: lib.rs
docs/superpowers/plans/: 2026-07-03-zorch-ipa-integration.md
docs/superpowers/specs/: 2026-07-03-zorch-ipa-integration-design.md
examples/: dump_absorb.rs  dump_as.rs  dump_as_fold_zk.rs  dump_as_zk.rs  dump_fixtures.rs  dump_hp.rs  dump_hp_zk.rs  dump_ipa.rs  dump_ipa_as.rs  dump_ipa_as_fold.rs  dump_ipa_as_fold_zk.rs  dump_ipa_as_zk.rs  dump_ipa_zk.rs  dump_nark.rs  dump_nark_zk.rs  dump_sponge.rs
export/: BUILD.bazel  export_as_decide.py  export_fold_zk.py  export_ipa.py  export_ipa_fold.py  export_lowering_smoke_test.py  export_nark.py  export_nark_zk.py  export_prove.py
python/: BUILD.bazel  pyproject.toml
python/accumulation_zorch/: __init__.py  absorbable.py  curve.py  field.py  hp_as.py  ipa_challenger.py  ipa_open.py  ipa_pc.py  ipa_pc_as.py  jcurve.py  jfield.py  jsponge.py  nark.py  poseidon_ark.py  r1cs_nark_as.py  sponge.py
python/accumulation_zorch/testing/: BUILD.bazel  absorb_test.py  as_chain_test.py  as_decide_test.py  as_fold_zk_e2e_test.py  as_fold_zk_test.py  as_hp_fold_zk_test.py  as_test.py  as_zk_test.py  curve_jax_test.py  hp_test.py  hp_zk_test.py  ipa_as_fold_test.py  ipa_as_fold_zk_test.py  ipa_as_test.py  ipa_as_zk_test.py  ipa_challenger_test.py  ipa_seam_zk_test.py  ipa_test.py  ipa_zk_test.py  ipa_zorch_spike_test.py  jcurve_test.py  jsponge_test.py  nark_test.py  nark_zk_test.py  recursion_artifacts.py  recursion_fold_zk_test.py  recursion_nark_test.py  recursion_nark_zk_test.py  sponge_frx_test.py  sponge_jax_test.py  sponge_test.py  substrate_test.py
python/testdata/: BUILD.bazel  absorb_fixtures.json  as_fixtures.json  as_fold_zk_fixtures.json  as_vesta_fixtures.json  as_zk_fixtures.json  as_zk_vesta_fixtures.json  hp_fixtures.json  hp_zk_fixtures.json  ipa_as_fixtures.json  ipa_as_fold_fixtures.json  ipa_as_fold_vesta_fixtures.json  ipa_as_fold_zk_fixtures.json  ipa_as_fold_zk_vesta_fixtures.json  ipa_as_vesta_fixtures.json  ipa_as_zk_fixtures.json  ipa_as_zk_vesta_fixtures.json  ipa_fixtures.json  ipa_vesta_fixtures.json  ipa_zk_fixtures.json  ipa_zk_vesta_fixtures.json  nark_fixtures.json  nark_vesta_fixtures.json  nark_zk_fixtures.json  sponge_fixtures.json  sponge_vesta_fixtures.json  substrate_fixtures.json
python/zorch/: VENDOR  VENDOR.md  __init__.py  _composite.py  fusion.py  transcript.py
python/zorch/hash/: duplex_sponge.py  permutation.py
python/zorch/hash/poseidon/: linear.py  params.py  poseidon.py
python/zorch/pcs/: protocol.py
python/zorch/pcs/ipa/: challenger.py  config.py  math.py  prover.py  setup.py  verifier.py
python/zorch/poly/: __init__.py  univariate.py
python/zorch/utils/: bits.py
src/: backend.rs  data_structures.rs  fused.rs  gpu.rs  lib.rs  oracle.rs  wire.rs
src/hp_as/: mod.rs
src/r1cs_nark_as/: mod.rs
src/r1cs_nark_as/r1cs_nark/: mod.rs
tests/: gpu_fused_bench.rs  gpu_fused_fold_bench.rs  gpu_fused_fold_zk_byte_match.rs  gpu_fused_ipa_decide_bench.rs  gpu_fused_ipa_decide_byte_match.rs  gpu_fused_ipa_fold_bench.rs  gpu_fused_ipa_fold_byte_match.rs  gpu_fused_ipa_fold_zk_byte_match.rs  gpu_fused_nark_byte_match.rs  gpu_fused_nark_zk_byte_match.rs  gpu_fused_no_zk_prove_byte_match.rs  gpu_fused_prove_byte_match.rs  gpu_fused_r1cs_decide_bench.rs  gpu_fused_r1cs_decide_byte_match.rs  recursion_step.rs
tests/common/: mod.rs
