"""accumulation-zorch — a GPU accumulation prover over the Pasta curve.

bzlmod module for the Python/JAX byte-match suite. The Rust GPU prover
(src/fused.rs + the crates/zkx-pjrt bindgen shim) stays on Cargo; only the jax
port and its byte-match tests build under Bazel.

zorch's pcs/ipa IPA-PC prover/verifier and Poseidon sponge are consumed as a
pinned git dependency (below), replacing the previous in-tree vendored copy. The
arkworks byte-match oracle is unchanged — it lives on the Rust side as the
../accumulation dev-dependency.
"""

module(
    name = "accumulation_zorch",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "1.7.0")

# zorch is not published on a Bazel registry; pin it from GitHub so builds are
# reproducible. For local dev against a working copy, add to .bazelrc.user
# (gitignored):
#   common --override_module=zorch=/abs/path/to/your/zorch/checkout
bazel_dep(name = "zorch", version = "0.0.0")
git_override(
    module_name = "zorch",
    remote = "https://github.com/fractalyze/zorch.git",
    # zorch main. Keep requirements.in's jax / zk-dtypes pins in lockstep with
    # this commit: accumulation-zorch's py_tests put BOTH this repo's pip hub and
    # zorch's on the runfiles, so a jax skew between the two silently breaks the
    # arkworks byte-match (zorch @ this pin builds against 0.10.0.dev20260705083732).
    commit = "a7f9d9995ee43659d1781ba8013bbedf46c55fa9",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    # jax / jaxlib / zk-dtypes are published on the Fractalyze index.
    extra_pip_args = ["--extra-index-url=https://fractalyze.github.io/pypi/simple/"],
    hub_name = "accumulation_zorch_pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock_3_11.txt",
)
use_repo(pip, "accumulation_zorch_pip")
