load("@rules_python//python:defs.bzl", "py_test")
load("@accumulation_zorch_pip//:requirements.bzl", "requirement")

# Every byte-match test is an absltest case that traces + proves on CPU and
# asserts the serialized bytes equal the golden arkworks fixtures
# (//python/testdata:fixtures). `bazel test` forces JAX_PLATFORMS=cpu (.bazelrc);
# the GPU byte-match is separate (Rust, hardware-gated). All tests share one dep
# set: the jax port plus the pip runtime.
_TEST_DEPS = [
    "//python:accumulation_zorch",
    requirement("absl_py"),
    requirement("jax"),
    requirement("numpy"),
    requirement("zk_dtypes"),
]

# The standing CPU byte-match suite. `bazel test //python/...` runs them all in
# parallel (each sandboxed), so wall time is the slowest test, not the sum.
_TESTS = [
    "absorb_test",
    "as_decide_test",
    "as_fold_zk_e2e_test",
    "as_fold_zk_test",
    "as_hp_fold_zk_test",
    "as_test",
    "as_zk_test",
    "hp_zk_test",
    "ipa_as_fold_test",
    "ipa_as_fold_zk_test",
    "ipa_as_test",
    "ipa_as_zk_test",
    "ipa_challenger_test",
    "ipa_test",
    "ipa_zk_test",
    "sponge_jax_test",
    "nark_test",
    "nark_zk_test",
    "recursion_nark_test",
    "recursion_nark_zk_test",
    "sponge_test",
    "substrate_test",
]

[
    py_test(
        name = t,
        size = "medium",
        srcs = [t + ".py"],
        data = ["//python/testdata:fixtures"],
        deps = _TEST_DEPS,
    )
    for t in _TESTS
]

# The full recursion-circuit IVC fold is minutes-slow on CPU and needs the large
# off-tree recursion fixtures (artifacts/recursion_*_fixtures.json, regenerated
# via the `--features recursion` Rust dump tests). Its fold math is covered by
# as_fold_zk*, its recursion circuit by recursion_nark*. Tagged manual so
# `bazel test //...` skips it (matching the CI omission), but it stays buildable
# and runnable on demand (`bazel test //python/accumulation_zorch/testing:recursion_fold_zk_test`).
py_test(
    name = "recursion_fold_zk_test",
    size = "large",
    srcs = ["recursion_fold_zk_test.py"],
    data = ["//python/testdata:fixtures"],
    tags = ["manual"],
    deps = _TEST_DEPS,
)
