load("@rules_python//python:defs.bzl", "py_test")
load("@accumulation_zorch_pip//:requirements.bzl", "requirement")

# Every byte-match test is an absltest case that traces + proves on CPU and
# asserts the serialized bytes equal the golden arkworks fixtures
# (//python/testdata:fixtures). `bazel test` forces JAX_PLATFORMS=cpu (.bazelrc);
# the GPU byte-match is separate (Rust, hardware-gated). All tests share one dep
# set: the frx port plus the pip runtime.
_TEST_DEPS = [
    "//python:accumulation_zorch",
    requirement("absl_py"),
    requirement("frx"),
    requirement("numpy"),
    requirement("zk_dtypes"),
]

# The standing CPU byte-match suite. `bazel test //python/...` runs them all in
# parallel (each sandboxed), so wall time is the slowest test, not the sum.
_TESTS = [
    "absorb_test",
    "as_decide_test",
    "as_fold_zk_e2e_test",
    "as_fold_zk_test",
    "as_hp_fold_zk_test",
    "as_test",
    "as_zk_test",
    "hp_zk_test",
    "ipa_as_fold_test",
    "ipa_as_fold_zk_test",
    "ipa_as_test",
    "ipa_as_zk_test",
    "ipa_seam_zk_test",
    "ipa_test",
    "ipa_zk_test",
    "nark_test",
    "nark_zk_test",
    "sponge_frx_test",
    "sponge_test",
    "substrate_test",
]

[
    py_test(
        name = t,
        size = "medium",
        srcs = [t + ".py"],
        data = ["//python/testdata:fixtures"],
        deps = _TEST_DEPS,
    )
    for t in _TESTS
]

# The on-demand recursion gates. Each byte-matches at the real ~22.5K/~77.5K-constraint
# recursion-circuit scale, against a large off-tree fixture
# (artifacts/recursion_*_fixtures.json, 17-147 MB) that the `--features recursion` Rust
# dump tests emit. Those fixtures are gitignored, so no clean checkout has them, and CI
# cannot produce them even in principle (its `cargo test` runs with default features).
#
# `manual` keeps them out of `bazel test //python/...`. Without it they would run, find no
# fixture, skip — and report green, because a test that exits 0 is a pass to bazel whether
# it checked anything or not. Their math is still covered in the standing suite at toy
# scale: the NARK core by nark_test / nark_zk_test, the fold by as_fold_zk*.
#
# Runnable on demand:
#
#     bazel test //python/accumulation_zorch/testing:recursion_nark_test
#
# recursion_fold_zk_test is "large" for a second reason of its own: the full IVC fold is
# minutes-slow on CPU.
_MANUAL_TESTS = {
    "recursion_nark_test": "medium",
    "recursion_nark_zk_test": "medium",
    "recursion_fold_zk_test": "large",
}

[
    py_test(
        name = t,
        size = size,
        srcs = [t + ".py"],
        data = ["//python/testdata:fixtures"],
        tags = ["manual"],
        deps = _TEST_DEPS,
    )
    for t, size in _MANUAL_TESTS.items()
]
